--- a/frontend/templates/pages/step2_hike.html
+++ b/frontend/templates/pages/step2_hike.html
@@ -163,12 +163,12 @@
 
 {% block navigation %}
 <div class="navigation-buttons">
-    <a href="{{ url_for('etape1') }}" class="btn btn-outline">
+    <a href="{{ url_for('step1') }}" class="btn btn-outline">
         <i class="fas fa-arrow-left"></i>
         Retour à la ville
     </a>
-    
-    <a href="{{ url_for('etape3') }}" class="btn btn-primary btn-large" id="nextStepBtn" style="display: none;">
+
+    <a href="{{ url_for('step3') }}" class="btn btn-primary btn-large" id="nextStepBtn" style="display: none;">
         Valider la rando et continuer
         <i class="fas fa-arrow-right"></i>
     </a>
