--- a/frontend/templates/pages/step3_spot.html
+++ b/frontend/templates/pages/step3_spot.html
@@ -154,12 +154,12 @@
 
 {% block navigation %}
 <div class="navigation-buttons">
-    <a href="{{ url_for('planificateur_etape2') }}" class="btn btn-outline">
+    <a href="{{ url_for('step2') }}" class="btn btn-outline">
         <i class="fas fa-arrow-left"></i>
         Étape précédente
     </a>
-    
-    <a href="{{ url_for('planificateur_etape4') }}" class="btn btn-primary btn-large" id="nextStepBtn" style="display: none;">
+
+    <a href="{{ url_for('step4') }}" class="btn btn-primary btn-large" id="nextStepBtn" style="display: none;">
         Étape suivante : Services
         <i class="fas fa-arrow-right"></i>
     </a>
