--- a/frontend/templates/pages/step4_services.html
+++ b/frontend/templates/pages/step4_services.html
@@ -266,12 +266,12 @@
 
 {% block navigation %}
 <div class="navigation-buttons">
-    <a href="{{ url_for('etape3') }}" class="btn btn-outline">
+    <a href="{{ url_for('step3') }}" class="btn btn-outline">
         <i class="fas fa-arrow-left"></i>
         Étape précédente
     </a>
     
-    <a href="{{ url_for('resultat') }}" class="btn btn-primary btn-large" id="nextStepBtn" style="display: none;">
+    <a href="{{ url_for('result') }}" class="btn btn-primary btn-large" id="nextStepBtn" style="display: none;">
         Voir jour 1
         <i class="fas fa-check-circle"></i>
     </a>
